--- a/templates/login.html
+++ b/templates/login.html
@@ -8,18 +8,40 @@ Login
 {% block styles %}
 {{super()}}
 <link rel="stylesheet" href="{{url_for('.static', filename='signin.css')}}">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&family=Piedra&display=swap" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
+    <nav class="navbar navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <center><h4>ManageIt</h4></center>
+        </div>
+      </div>
+    </nav>
+    <div class="msg">
+    {% with messages = get_flashed_messages() %}
+            {% if messages %}
+              {% for message in messages %}
+                <div class="alert alert-info" role="alert">
+                  <center>{{message}}</center>
+                </div>
+              {% endfor %}
+            {% endif %}
+    {% endwith %}
+    </div>
     <div class="container">
 
       <form class="form-signin" method="POST" action="/login">
-        <h2 class="form-signin-heading">Please sign in</h2>
+        <center><h2 class="form-signin-heading">LOGIN</h2></center>
         {{ form.hidden_tag() }}
-        {{ wtf.form_field(form.username) }}
-        {{ wtf.form_field(form.password) }}
-        {{ wtf.form_field(form.remember) }}
+        <center>{{ wtf.form_field(form.username) }}</center>
+        <center>{{ wtf.form_field(form.password) }}</center>
+        <center>{{ wtf.form_field(form.remember) }}</center>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <center><h4 class="already">Do Not Have any Account?</h4></center>
+        <center><a href="{{ url_for('signup') }}">Register</a></center>
       </form>
 
     </div> <!-- /container -->
