--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,18 +8,29 @@ Sign Up
 {% block styles %}
 {{super()}}
 <link rel="stylesheet" href="{{url_for('.static', filename='signin.css')}}">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&family=Piedra&display=swap" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
+<nav class="navbar navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <center><h4>ManageIt</h4></center>
+        </div>
+      </div>
+</nav>
 <div class="container">
 
   <form class="form-signin" method="POST" action="/signup">
-    <h2 class="form-signin-heading">Sign Up</h2>
+    <center><h2 class="form-signin-heading">REGISTER</h2></center>
     {{ form.hidden_tag() }}
-    {{ wtf.form_field(form.username) }}
-    {{ wtf.form_field(form.email) }}
-    {{ wtf.form_field(form.password) }}
+    <center>{{ wtf.form_field(form.username) }}</center>
+    <center>{{ wtf.form_field(form.email) }}</center>
+    <center>{{ wtf.form_field(form.password) }}</center>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+    <center><h4 class="already">Already Having An Account?</h4></center>
+    <center><a href="{{ url_for('login') }}">Login</a></center>
   </form>
 
 </div> <!-- /container -->
