--- a/static/addproject.css
+++ b/static/addproject.css
@@ -126,8 +126,9 @@ body
   color: white;
   border-radius: 27px;
 }
-.main .container
+.main .containe
 {
+  margin: 0 auto;
   margin-top: 50px;
   padding: 50px;
   width: 80%;
@@ -144,4 +145,133 @@ body
   color: #e9ecf0;
   width: 50%;
   font-size: 24px;
+}
+
+@media only screen and (max-width: 1141px)
+{
+  .nav-sidebar  li a 
+  {
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 1000px)
+{
+    .nav-sidebar  li a 
+    {
+      font-size: 18px;
+    }
+    .main .page-header 
+    {
+      font-size: 30px;
+    }
+    .form-signin 
+    {
+      width: 80%;
+      font-size: 18px;
+    }
+}
+@media only screen and (max-width: 767px)
+{
+  .sidebar 
+  {
+    width: 100%;
+    height: 30px;
+    position: static;
+  }
+  .sidebar .page-header
+  {
+    display: none;
+  }
+  .nav-sidebar 
+  {
+    margin: 0px;
+    margin-top: -30px;
+    height: 30px;
+    padding: 30px;
+  } 
+  .nav-sidebar li a 
+  {
+    float: left;
+    padding: 0px;
+    margin-left: 3px;
+    margin-top: -6px;
+    width: 90px;
+    text-align: center;
+    font-size: 15px;
+  }
+  .nav-sidebar  li a i
+  {
+    display: none;
+  }
+  .nav-sidebar li a:hover
+  {
+    background-color: transparent;
+  }
+  .nav-sidebar  li a:focus
+  {
+    background-color: transparent;
+  }
+  .navbar-fixed-top 
+  {
+    padding: 0px;
+    background-color: black;
+  }
+  .navbar-header
+  {
+    float: left;
+  }
+  .navbar-header h4
+  {
+    margin-left: 30px;
+    font-size: 24px;
+  }
+  .nav-con
+  {
+    float: right;
+  }
+  .nav-con ul li a
+  {
+    font-size: 13px;
+  }
+  .main .page-header 
+  {
+    font-size: 20px;
+  }
+  .form-signin 
+  {
+    width: 100%;
+    font-size: 14px;
+  }
+  .form-signin button
+  {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 430px)
+{
+  .main .page-header 
+  {
+    font-size: 17px;
+  }
+  .main .containe
+  {
+    margin: 0 auto;
+    margin-top: 50px;
+    padding: 0px;
+    width: 90%;
+  }
+  .form-signin 
+  {
+    width: 100%;
+    font-size: 12px;
+  }
+  .form-signin button
+  {
+    font-size: 10px;
+  }
+  .nav-sidebar li a 
+  {
+    font-size: 12px;
+    width: 65px;
+  }
 }
