--- a/static/personaltask.css
+++ b/static/personaltask.css
@@ -126,6 +126,10 @@ body
   color: white;
   border-radius: 27px;
 }
+.modal
+{
+  margin-top: 200px;
+}
 .main .containe
 {
   height: 500px;
@@ -193,4 +197,137 @@ body
   font-size: 15px;
   border-radius: 50%;
   margin-left: 35px;
+}
+
+
+
+
+@media only screen and (max-width: 1141px)
+{
+  .nav-sidebar  li a 
+  {
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 1000px)
+{
+    .nav-sidebar  li a 
+    {
+      font-size: 18px;
+    }
+    .main .page-header 
+    {
+      font-size: 30px;
+    }
+    .form-signin 
+    {
+      width: 80%;
+      font-size: 18px;
+    }
+}
+@media only screen and (max-width: 767px)
+{
+  .sidebar 
+  {
+    width: 100%;
+    height: 30px;
+    position: static;
+  }
+  .sidebar .page-header
+  {
+    display: none;
+  }
+  .nav-sidebar 
+  {
+    margin: 0px;
+    margin-top: -30px;
+    height: 30px;
+    padding: 30px;
+  } 
+  .nav-sidebar li a 
+  {
+    float: left;
+    padding: 0px;
+    margin-left: 3px;
+    margin-top: -6px;
+    width: 90px;
+    text-align: center;
+    font-size: 15px;
+  }
+  .nav-sidebar  li a i
+  {
+    display: none;
+  }
+  .nav-sidebar li a:hover
+  {
+    background-color: transparent;
+  }
+  .nav-sidebar  li a:focus
+  {
+     background-color: transparent;
+  }
+  .navbar-fixed-top 
+  {
+    padding: 0px;
+    background-color: black;
+  }
+  .navbar-header
+  {
+    float: left;
+  }
+  .navbar-header h4
+  {
+    margin-left: 30px;
+    font-size: 24px;
+  }
+  .nav-con
+  {
+    float: right;
+  }
+  .nav-con ul li a
+  {
+    font-size: 13px;
+  }
+  .main .page-header 
+  {
+    font-size: 20px;
+  }
+  .main .containe
+  {
+    height: 380px;
+    width: 100%;
+  }
+  .main .containe .msg-content
+  {
+    height: 290px;
+  }
+  .modal
+  {
+    margin-top: 100px;
+  }
+  .modal-body .form-signin
+  {
+    margin: 0 auto;
+  }
+  .main .containe .msg-header h1
+  {
+     font-size: 24px;
+  }
+  .main .containe .msg-header a
+  {
+    font-size: 22px;
+    margin-right: 30px;
+  }
+}
+@media only screen and (max-width: 430px)
+{
+  .main .page-header 
+  {
+    font-size: 17px;
+  }
+  .nav-sidebar li a 
+  {
+    font-size: 12px;
+    width: 60px;
+  }
 }
