--- a/templates/addproject.html
+++ b/templates/addproject.html
@@ -53,7 +53,7 @@ Add Project
                       {% endif %}
               {% endwith %}
             </div>
-            <div class="container">
+            <div class="containe">
 
               <form class="form-signin" method="POST" action="/addproject">
                 <center>{{ wtf.form_field(form.projectname) }}</center>
