--- a/templates/teamdetails.html
+++ b/templates/teamdetails.html
@@ -1,1 +1,55 @@
+{% extends "bootstrap/base.html" %}
+
+{% block title %}
+Dashboard
+{% endblock %}
+
+{% block styles %}
+{{super()}}
+<link rel="stylesheet" href="{{url_for('.static', filename='teamdetails.css')}}">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
+{% endblock %}
+
+{% block content %}
+    <nav class="navbar navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <center><h4>ManageIt</h4></center>
+        </div>
+        <div class="nav-con">
+          <ul>
+            <li><a href="{{ url_for('logout') }}"><i class="fa fa-power-off" aria-hidden="true"></i>&nbsp&nbspLog Out</a></li>
+          </ul>
+          <!--<form class="navbar-form navbar-right">
+            <input type="text" class="form-control" placeholder="Search...">
+          </form>-->
+        </div>
+      </div>
+    </nav>
+    <nav class="navbar-top">
+      <div class="container-fluid">
+        <div class="nav-con-top">
+          <ul>
+          	<li><a href="{{ url_for('myproject') }}"><i class="fa fa-arrow-left" aria-hidden="true"></i>&nbsp&nbspBack</a></li>
+          	{% if name == task.creator %}
+               <li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp&nbspAdd Member</a></li>   
+            {% endif %}
+          	<li><a href="#"><i class="fa fa-group" aria-hidden="true"></i>&nbsp&nbspTeam Details</a></li>
+          	<li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i>&nbsp&nbspWork Details</a></li>
+          	<li><a href="#"><i class="fa fa-tasks" aria-hidden="true"></i>&nbsp&nbspProgress</a></li>
+            <li><a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp&nbspChat</a></li>
+            
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="main">
+          <center><h1 class="page-header">{{task.projectname}}</h1></center>
+        </div>
+      </div>
+    </div>
+{% endblock %}
 
