--- a/templates/teamdetails.html
+++ b/templates/teamdetails.html
@@ -38,7 +38,7 @@ Dashboard
           	<li><a href="#"><i class="fa fa-group" aria-hidden="true"></i>&nbsp&nbspTeam Details</a></li>
           	<li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i>&nbsp&nbspWork Details</a></li>
           	<li><a href="#"><i class="fa fa-tasks" aria-hidden="true"></i>&nbsp&nbspProgress</a></li>
-            <li><a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp&nbspChat</a></li>
+            <li><a href="{{ url_for('chat') }}"><i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp&nbspChat</a></li>
             
           </ul>
         </div>
