--- a/templates/addproject.html
+++ b/templates/addproject.html
@@ -57,6 +57,7 @@ Add Project
 
               <form class="form-signin" method="POST" action="/addproject">
                 <center>{{ wtf.form_field(form.projectname) }}</center>
+                <center>{{ wtf.form_field(form.role) }}</center>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">ADD PROJECT</button>
               </form>
 
