--- a/static/workdetails.css
+++ b/static/workdetails.css
@@ -119,37 +119,23 @@ body
   width: 60%;
   margin: 0 auto;
 }
-.main .team-details
-{
-  width: 60%;
-  margin: 0 auto;
-  background-color: white;
-  border-radius: 20px;
-  padding: 0px;
-}
-.main table
-{
-  width: 100%;
-}
-.main table thead tr
-{
-  border-bottom: 2px solid black;
-}
-.main table thead th
-{
-  padding: 20px;
-  text-align: center;
-  font-size: 20px;
-}
-.main table tbody td
-{
-  padding: 10px; 
-  text-align: center;
-  font-size: 15px;
-}
 .modal
 {
   margin-top: 100px;
+}
+.main .btn
+{
+  width: 100%;
+  padding: 2px;
+} 
+.main .btn button
+{
+  padding: 10px;
+  border-radius: 20px;
+  width: 27%;
+  background-color: #25254f;
+  font-size: 20px;
+  color: white;
 }
 @media only screen and (max-width: 1000px)
 {
