--- a/templates/chat.html
+++ b/templates/chat.html
@@ -31,11 +31,11 @@ Dashboard
       <div class="container-fluid">
         <div class="nav-con-top">
           <ul>
+
             <li><a href="{{ url_for('myproject') }}"><i class="fa fa-arrow-left" aria-hidden="true"></i>&nbsp&nbspBack</a></li>
-            <li><a href="#"><i class="fa fa-group" aria-hidden="true"></i>&nbsp&nbspTeam Details</a></li>
-            <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i>&nbsp&nbspWork Details</a></li>
-            <li><a href="#"><i class="fa fa-tasks" aria-hidden="true"></i>&nbsp&nbspProgress</a></li>
-            <li><a href="{{ url_for('chat') }}"><i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp&nbspChat</a></li>
+            <li><a href="{{ url_for('update_project', project_id=task.id, project_name=task.projectname) }}"><i class="fa fa-users" aria-hidden="true"></i>&nbsp&nbspTeam Details</a></li>
+            <li><a href="{{ url_for('workdetails', project_id=task.id, project_name=task.projectname) }}"><i class="fa fa-briefcase" aria-hidden="true"></i>&nbsp&nbspWork Details</a></li>
+            <li><a href="#"><i class="fa fa-comments" aria-hidden="true"></i>&nbsp&nbspChat</a></li>
             
           </ul>
         </div>
@@ -45,31 +45,34 @@ Dashboard
       <div class="row">
         <div class="main">
           <nav class="sidebarr">
-                <h4>Rooms</h4>
-                {% for room in rooms %}
-                    <p id="{{ room|title }}" class="select-room cursor-pointer">{{ room|title }}</p>
-                {% endfor %}
-            </nav>
-            <div id="rightside-pannel">
+                    <h4>Rooms</h4>
+                    {% for room in rooms %}
+                        <p id="{{ room|title }}" class="select-room cursor-pointer">{{ room|title }}</p>
+                    {% endfor %}
+                </nav>
+                <!-- Sidebar end -->
+
+                <!-- Rightside pannel start -->
+                <div id="rightside-pannel">
 
                     <!-- Display message start-->
-                <div id="display-message-section">
-                </div>
+                    <div id="display-message-section">
+                    </div>
                     <!-- Display message end -->
 
                     <!-- Type message start -->
-                <div id="input-area" class="input-group mb-3">
-                    <input type="text" id="user_message" class="form-control" placeholder="Type here..." aria-label="Type a message" aria-describedby="basic-addon2" autocomplete="off">
-                    <div class="input-group-append">
-                        <button id="send_message" class="btn btn-warning" type="button">SEND <i class="fas fa-paper-plane"></i></button>
+                   <div id="input-area" class="input-group mb-3">
+                        <input type="text" id="user_message" class="form-control" placeholder="Type here..." aria-label="Type a message" aria-describedby="basic-addon2" autocomplete="off">
+                        <div class="input-group-append">
+                            <button id="send_message" class="btn btn-warning" type="button">SEND <i class="fas fa-paper-plane"></i></button>
+                        </div>
                     </div>
-                </div>
                     <!-- Type message end -->
-            </div>
+                </div>
         </div>
       </div>
     </div>
-
+        <span id="get-username">{{ username }}</span>
         <!-- Custom chat JS -->
         <script src="{{ url_for('static', filename='scripts/chat_page.js') }}"></script>
 
