--- a/templates/teamdetails.html
+++ b/templates/teamdetails.html
@@ -1,9 +1,8 @@
 {% extends "bootstrap/base.html" %}
-
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-Dashboard
+Team Details
 {% endblock %}
 
 {% block styles %}
