--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -126,7 +126,18 @@ body
   color: white;
   border-radius: 27px;
 }
-
+.main .pro_name
+{
+  padding: 10px;
+  text-align: center;
+  font-size: 20px;
+  width: 50%;
+  margin: 0 auto;
+  margin-bottom: 5px;
+  border-radius: 10px;
+  color: black;
+  background-color: white;
+}
 
 @media only screen and (max-width: 1141px)
 {
@@ -217,6 +228,14 @@ body
   .main .page-header 
   {
     font-size: 20px;
+  }
+  .main .pro_name
+  {
+    width: 100%;
+  }
+  .main .msg
+  {
+    width: 100%;
   }
 }
 @media only screen and (max-width: 430px)
